fix z-index

--- a/src/Components/LandingPage/InfoSection.styles.scss
+++ b/src/Components/LandingPage/InfoSection.styles.scss
@@ -6,11 +6,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 48px;
+    gap: 140px;
 
     @media (min-width: map-get($breakpoints, phone)) {
         flex-direction: row;
         height: 300px;
+        gap: 48px;
     }
 
     .info-card {
@@ -29,15 +30,15 @@
         }
 
         .info-image-container {
-            height: 100%;
-             @media (min-width: map-get($breakpoints, phone)) {
-                    height:40%
-                }
+            height: 80%;
+            @media (min-width: map-get($breakpoints, phone)) {
+                height: 40%;
+            }
 
             img {
                 height: 100%;
                 @media (min-width: map-get($breakpoints, phone)) {
-                    height:80%
+                    height: 80%;
                 }
             }
         }
